[project]
name = "rli"
version = "0.1.0"
description = "Reinforcement Learning Implementations"
authors = [
    {name = "Dvodnenko",email = "thekovalskii@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "matplotlib (>=3.11.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
